8289: Remove security manager related code
Reviewed-by: aptmac